# lexopt-wasm

./: Cargo.toml  README.md  lexopt-world.md
.devcontainer/: devcontainer.json
src/: bindings.rs  lib.rs
wit/: jcbhmr-lexopt.wit
