[package]
name = "lexopt-wasm"
version = "0.3.0"
edition = "2021"

[dependencies]
lexopt = "=0.3.0"
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "jcbhmr:lexopt"

[package.metadata.component.dependencies]

[workspace]
members = ["xtask"]
